# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
mazegen/: generator.py  solver.py
